--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "scrivito": "^1.41.0"
+    "scrivito": "file:../scrivito_js/js/build/npm_scrivito"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
@@ -21,6 +21,10 @@
     "ignore": [
       ".git",
       "node_modules/**/node_modules"
+    ],
+    "watch": [
+      "*.*",
+      "../scrivito_js/js/build/npm_scrivito"
     ]
   }
 }
